--- a/gb/22/11/5/n13859847.md
+++ b/gb/22/11/5/n13859847.md
@@ -3,48 +3,45 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“偶像剧母子”再聚首 林美秀大力抱紧阮经天</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/11/id13859852-20221104-Welcome-My-Home-1-501-600x400.jpeg" />
-<h6>户长林美秀在《欢迎光临-等你来家1》中带领大家。（灰人文化提供）
-</h6>
+<h6>户长林美秀在《欢迎光临-等你来家1》中带领大家。（灰人文化提供）</h6>
 <hr>
 	<p>【大纪元2022年11月05日讯】（大纪元记者林森山报导）实境真人秀《欢迎光临-等你来家1》本周六将播出第5集，首位飞行嘉宾阮经天前来助阵，他特地飞来员贝岛支持偏乡的社区再生，也与好久不见的“岳母”林美秀再相会。</p>
 <p>这对偶像剧母子搭档，相隔多年后二人在萤幕前再次聚首，相见时林美秀开心笑喊“我的软八天”，并冲向对方大力抱紧。</p>
 <p>金马影帝阮经天曾在2008年播出的偶像剧《命中注定我爱你》中饰演男主角，当年林美秀在剧里饰演女主角陈乔恩的妈妈，他则是林美秀剧中的女婿。虽然该剧播出后时间已经过去多年，而久别的“岳母”与“女婿”在此次真人秀又重逢。</p>
-<figure id="attachment_13859850" aria-describedby="caption-attachment-13859850" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13859850-20221104-Welcome-My-Home-1-502.jpg"><img decoding="async" class="size-large wp-image-13859850" src="https://i.epochtimes.com/assets/uploads/2022/11/id13859850-20221104-Welcome-My-Home-1-502-600x447.jpg" alt="" width="600" b="447" /></a><figcaption id="caption-attachment-13859850" class="wp-caption-text">《欢迎光临-等你来家1》阮经天与好久不见的“岳母”林美秀再相会。（灰人文化提供）</figcaption></figure>
+<figure id="attachment_13859850" aria-describedby="caption-attachment-13859850" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13859850-20221104-Welcome-My-Home-1-502.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-13859850" src="https://i.epochtimes.com/assets/uploads/2022/11/id13859850-20221104-Welcome-My-Home-1-502-600x447.jpg" alt="" width="600" b="447"></a><figcaption id="caption-attachment-13859850" class="wp-caption-text">《欢迎光临-等你来家1》阮经天与好久不见的“岳母”林美秀再相会。（灰人文化提供）</figcaption></figure>
 <p>在本集真人秀里，餐厅开张在即，节目中艺人成员们为餐厅忙着做最后的布置。好人缘的他们，更获得超过20盆来自艺人好友送的花篮祝福，但也让他们搬得气喘吁吁又爆汗。</p>
-<figure id="attachment_13859849" aria-describedby="caption-attachment-13859849" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13859849-20221104-Welcome-My-Home-1-505-1V4A0533.jpeg"><img decoding="async" class="size-large wp-image-13859849" src="https://i.epochtimes.com/assets/uploads/2022/11/id13859849-20221104-Welcome-My-Home-1-505-1V4A0533-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13859849" class="wp-caption-text">节目中餐厅开张在即，他们获得超过20盆来自艺人好友送的花篮祝福。（灰人文化提供）</figcaption></figure>
+<figure id="attachment_13859849" aria-describedby="caption-attachment-13859849" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13859849-20221104-Welcome-My-Home-1-505-1V4A0533.jpeg" rel="nofollow"><img decoding="async" class="size-large wp-image-13859849" src="https://i.epochtimes.com/assets/uploads/2022/11/id13859849-20221104-Welcome-My-Home-1-505-1V4A0533-600x400.jpeg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-13859849" class="wp-caption-text">节目中餐厅开张在即，他们获得超过20盆来自艺人好友送的花篮祝福。（灰人文化提供）</figcaption></figure>
 <p>未料开幕的前一天却传出坏消息，健志与阮经天在玩飞盘时，竟不慎扭伤脚踝，他当场跌了一大跤，痛得直飙泪。</p>
 <p>受伤的健志痛喊：“我腿伸不直，完了！真的芭比Q了！”最后阮经天发挥同事爱，用推车组成临时的轮椅，将健志送到港口搭船前往急救脚伤。因为成员意外受伤，也让团队顿失一名战友。</p>
-<figure id="attachment_13859851" aria-describedby="caption-attachment-13859851" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13859851-20221104-Welcome-My-Home-1-503.jpeg"><img decoding="async" class="size-large wp-image-13859851" src="https://i.epochtimes.com/assets/uploads/2022/11/id13859851-20221104-Welcome-My-Home-1-503-600x800.jpeg" alt="" width="450" b="800" /></a><figcaption id="caption-attachment-13859851" class="wp-caption-text">开幕前传出噩耗，健志直摔落地造成脚严重扭伤，紧急搭船回本岛急救。（灰人文化提供）</figcaption></figure>
+<figure id="attachment_13859851" aria-describedby="caption-attachment-13859851" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/11/id13859851-20221104-Welcome-My-Home-1-503.jpeg" rel="nofollow"><img decoding="async" class="size-large wp-image-13859851" src="https://i.epochtimes.com/assets/uploads/2022/11/id13859851-20221104-Welcome-My-Home-1-503-600x800.jpeg" alt="" width="450" b="800"></a><figcaption id="caption-attachment-13859851" class="wp-caption-text">开幕前传出噩耗，健志直摔落地造成脚严重扭伤，紧急搭船回本岛急救。（灰人文化提供）</figcaption></figure>
 <p>责任编辑：刘宇涵</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/2/23/n4646167.md#1">魏晨发片三十而立 阮经天送蛋糕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/22/n10582031.md#1">阮经天被问另一半 直呼要像赵又廷与高圆圆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/9/16/n12407887.md#1">林俊杰拍MV累垮阮经天 真实体验“体力活”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/4/n13817083.md#1">林美秀拍真人秀节目 身为“一朵花”备受礼遇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/10/n11444846.md#1" target="_blank">夏祷：2019火种：天象巨变（1）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/10/n11580971.md#1" target="_blank">好莱坞大奖获得者 一位北京青年的音乐路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/29/n9782273.md#1" target="_blank">高天韵：锡盖特博物馆 唤醒罗马尼亚的记忆</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/31/n10103847.md#1" target="_blank">老伴绝处逢生 八旬警察举杯感恩</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14410876.md#1">【未解之谜】触摸UFO 美军人意外接获神秘信息</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/2/n14404364.md#1">清朝名臣方观承官至总督 相士早预知</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14402150.md#1">元配宽容不伦婢女得到福报 正直知县因一念不容下场凄惨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405076.md#1">人算不如天算 嫉妒心反害了自身</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781563.md#1">在宋朝作诗能转运？宋祁错失状元得赐婚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413507.md#1">【佳音时刻】川普就职庆典 亮点抢先看</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412775.md#1">?【百年真相】陈一新走周永康老路 前景必惨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413508.md#1">【纪元焦点】李宜雪案官报被指造假 洗白警方</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410788.md#1">高致命禽流感H5N1爆发 业内人士揭中共掩瞒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412447.md#1">银川成都天空惊现大量不明发光物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/12/n14412053.md#1">今年首个满月与火星相遇 如何观赏一文看懂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412852.md#1">请黄晓明呵护赵丽颖 李冰冰温暖话语登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413559.md#1">被传洛杉矶两套豪宅被烧毁 冯小刚回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412785.md#1">好莱坞明星救济受灾户 裘莉开放豪宅收容亲友</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413305.md#1">淡出演艺圈多年 李威因北市精舍命案遭约谈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14413620.md#1">野火仍肆虐 李奥纳多搭私人飞机离开加州惹议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412475.md#1">研究：人们常吃的海鲜中含有塑胶微粒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/9/n14409423.md#1">百岁人瑞常吃食物前10名 选对食物抗老化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/12/n14411695.md#1">什么是“肌肉记忆”？ 在生活中如何运用？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410495.md#1">如何分辨是鼻子过敏还是感冒？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413186.md#1">在家里赤脚走路好不好？ 看看医生怎么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/5/n13859847.htm">“偶像剧母子”再聚首 林美秀大力抱紧阮经天</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/11/5/n13859847.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
