--- a/gb/25/4/24/n14490902.md
+++ b/gb/25/4/24/n14490902.md
@@ -14,18 +14,12 @@
 <p>林边乡“和成健康药局”药师陈昱辰分享自己在第一线推动高龄照护经验，他表示，常遇到外籍看护来领药，透过手机翻译软体协助沟通，确保讯息正确无误，长辈若有长照需求，也会协助连结相关资源，行动药师也可前往长辈常去的据点，进行卫教宣导、提供健康保健知识，甚至当长辈无法外出时，也会亲自将药物送到府上，他说，虽然工作辛苦，但只要长辈的亲属们一句“谢谢您照顾我的家人”，使命感就油然而生。</p>
 <p>责任编辑：郑桦</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645644.md#1">2025嘉义花海生活节 玉山路底全嘉最美角落</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645652.md#1">2025年写生日 用画笔穿梭城市的过去与未来</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645664.md#1">“忆嘉人6支箭”与您一起守护家人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645604.md#1">嘉市宣信国小69周年校庆 市长亲临带给祝福</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645181.md#1">屏东圣诞节点灯 百年屏东公园秒进北国童话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645159.md#1">屏警跨域扫诈 12天瓦解48诈团、查缉上亿资金</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645039.md#1">义竹有我也有你感恩音乐会 温馨点亮微凉秋夜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14644991.md#1">嘉大交响乐团音乐会 钢琴家杨千莹献奏经典</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14644949.md#1">林铁通车周年庆 打造阿里山小火车节庆品牌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14644851.md#1">嘉市长者活跃老化竞赛 获全台双铜市长赞赏</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/8/n10285705.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(下)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/4/n10688678.md#1" target="_blank">摆脱人生困境 美国女子重拾幸福</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/11/n10134744.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（一）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/12/18/n3755139.md#1" target="_blank">佚名：迫害法轮功的中共人员犯了哪些法</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
